new added change

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -852,6 +852,21 @@ h3 {
 	}
 }
 
+#new_added {
+
+	min-height: 21.4em;
+	background-color: #d7dfdf;
+    padding: 3.5em 15% 1em;
+	// margin-left: 20px;
+
+	h1 {
+		margin-bottom: 0;
+    	margin-top: -0.17em;
+    	// font-size: 3em;
+    	line-height: 1.1;
+	}
+}
+
 #logo-and-name h1 {
     margin-left: 0px;
 }
