--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -225,6 +225,7 @@
 	background-color: #d7dfdf;
     padding: 3.5em 15% 1em;
 	// margin-left: 20px;
+  height: 321px;
 
 	h1 {
 		margin-bottom: 0;
