--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,23 +218,50 @@
   }
 }
 
+#mod-img-holder{
 
-#new_added {
 
-	min-height: 21.4em;
-	background-color: #d7dfdf;
-    padding: 3.5em 15% 1em;
-	// margin-left: 20px;
-  height: 321px;
 
-	h1 {
-		margin-bottom: 0;
-    	margin-top: -0.17em;
-    	// font-size: 3em;
-    	line-height: 1.1;
-	}
 }
 
+#new_added {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    -webkit-transform: scale3d(1, 1, 1) rotate(0);
+    transform: scale3d(1, 1, 1) rotate(0);
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    background-size: cover;
+    background-position: center;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  .new_added-scrim .new_added {
+      background-blend-mode: multiply;
+      background-color: #0db7b8;
+    }
+
+}
+#cta--over-img {
+    display: inline-block;
+    vertical-align: middle;
+    color: #fff;
+    border-color: #fff;
+    position: relative;
+  }
+#cta {
+      font-size: 1.25em;
+      display: inline-block;
+      z-index: 1;
+      padding: 0.9375em 1.25em;
+      border: 2px solid;
+      border-radius: 5px;
+      text-decoration: none;
+      -webkit-transition: color 200ms ease-in-out,background-color 200ms ease-in-out,-webkit-transform 100ms ease-in-out;
+      transition: color 200ms ease-in-out,background-color 200ms ease-in-out,transform 100ms ease-in-out;
+}
 // Virtual exhibits
 #virtual-exhibit {
 
