--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,6 +218,19 @@
   }
 }
 
+#module{
+  position: relative;
+    float: left;
+    min-height: 275px;
+    max-height: 100%;
+    background-color: #fff;
+    vertical-align: top;
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  
 #mod-img-holder{
   position: absolute;
   top: 0;
