dupe cta to mod

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -230,7 +230,7 @@
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
   }
-  
+
 #mod-img-holder{
   position: absolute;
   top: 0;
@@ -260,14 +260,14 @@
     }
 
 }
-#cta--over-img {
+#mod--over-img {
     display: inline-block;
     vertical-align: middle;
     color: #fff;
     border-color: #fff;
     position: relative;
   }
-#cta {
+#mod {
       font-size: 1.25em;
       display: inline-block;
       z-index: 1;
