--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -217,12 +217,17 @@
   	margin: 0 0 0 1em;
   }
 }
-
+//What's New Box
 #module{
     position: relative;
-    float: left;
+
+    div {
+    background-image: url(https://ohs.org/education/images/jesse-stahl-on-grave-digger-bc006600.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    display: block;
     height: 321px;
-    background-color: #fff;
     vertical-align: top;
     -webkit-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
