--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -234,7 +234,7 @@
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
   }
-
+}
 #module-img-holder{
   position: absolute;
   top: 0;
