--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -240,7 +240,7 @@
     background-color: #0db7b8;
   }
 }
-#module-img-holder{
+.module-img-holder{
   position: absolute;
   top: 0;
   bottom: 0;
@@ -249,14 +249,14 @@
 
 }
 
-#mod-over-img {
+.mod-over-img {
     display: inline-block;
     vertical-align: middle;
     color: #fff;
     border-color: #fff;
     position: relative;
   }
-#mod {
+.mod {
       font-size: 1.25em;
       display: inline-block;
       z-index: 1;
