--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -238,6 +238,8 @@
     backface-visibility: hidden;
     background-blend-mode: multiply;
     background-color: #0db7b8;
+    cursor: pointer;
+    overflow: hidden;
   }
 }
 .module-img-holder{
