--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,8 +218,49 @@
   }
 }
 //What's New Box
+#module{
+    position: relative;
 
+    div {
+    background-image: url(https://ohs.org/education/images/jesse-stahl-on-grave-digger-bc006600.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    display: block;
+    height: 321px;
+    vertical-align: top;
+    -webkit-transform: scale3d(1, 1, 1) rotate(0);
+    transform: scale3d(1, 1, 1) rotate(0);
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    background-position: center;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-blend-mode: multiply;
+    background-color: #0db7b8;
+    cursor: pointer;
+    overflow: hidden;
+  }
+}
 
+.mod-over-img {
+    display: inline-block;
+    vertical-align: middle;
+    color: #fff;
+    border-color: #fff;
+    position: relative;
+  }
+.mod {
+      font-size: 1.25em;
+      display: inline-block;
+      z-index: 1;
+      padding: 0.9375em 1.25em;
+      border: 2px solid;
+      border-radius: 5px;
+      text-decoration: none;
+      -webkit-transition: color 200ms ease-in-out,background-color 200ms ease-in-out,-webkit-transform 100ms ease-in-out;
+      transition: color 200ms ease-in-out,background-color 200ms ease-in-out,transform 100ms ease-in-out;
+}
 // Virtual exhibits
 #virtual-exhibit {
 
