--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -777,6 +777,14 @@ h3 {
   #context-menu a {
   	border: none;
   }
+
+  #module {
+    div{
+      width:100%;
+      background-position: center;
+    }
+  }
+
   #virtual-exhibit{
     div {
       width: 100%;
