--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -243,6 +243,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    text-align: center;
     -webkit-transform: scale3d(1, 1, 1) rotate(0);
     transform: scale3d(1, 1, 1) rotate(0);
     -webkit-transition: all 200ms ease-in-out;
