--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -222,7 +222,18 @@
     position: relative;
 
 }
-
+.mod-link{
+    width: 33%;
+    height: 0;
+    padding-bottom: 33%;
+    float: left;
+    text-align: center;
+    position: relative;
+    border-right: 3px solid #fff;
+    cursor: pointer;
+    overflow: hidden;
+    color: #fff;
+}
 .mod-over-img {
     display: inline-block;
     vertical-align: middle;
@@ -240,7 +251,7 @@
       text-decoration: none;
 }
 .mod-img-holder {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     left: 0;
@@ -255,7 +266,7 @@
     &:after {
         content: '';
         display: block;
-        position: absolute;
+        position: relative;
         top: 0;
         right: 0;
         left: 0;
