--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -250,8 +250,9 @@
       border-radius: 5px;
       text-decoration: none;
 }
-.mod-img-holder {
+.mod-img {
     position: relative;
+    width: 100%;
     top: 0;
     right: 0;
     left: 0;
