--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -260,6 +260,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-blend-mode: multiply;
+    background-color: #0db7b8;
     -webkit-transform: scale3d(1, 1, 1) rotate(0);
     transform: scale3d(1, 1, 1) rotate(0);
     -webkit-transition: all 200ms ease-in-out;
