--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -220,6 +220,9 @@
 //What's New Box
 #module{
     position: relative;
+    width:100%;
+    height: 321px;
+    display: block;
 
 }
 .mod-link{
@@ -251,7 +254,7 @@
       text-decoration: none;
 }
 .mod-img {
-    position: relative;
+    position: absolute;
     width: 100%;
     top: 0;
     right: 0;
@@ -283,7 +286,7 @@
                 background-color: #fff !important;
                 color: #0db7b8 !important;
             }
-            .mod-img-holder {
+            .mod-over-img {
                 -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
                 transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
             }
