--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -220,19 +220,19 @@
 //What's New Box
 #module{
     position: relative;
+    padding: 20px, 0px, 30px, 0px;
     width:100%;
-    height: 321px;
+    height: 330px;
     display: block;
 
 }
 .mod-link{
-    width: 33%;
+    width: 100%;
     height: 0;
-    padding-bottom: 33%;
+    padding-bottom: 30px;
     float: left;
     text-align: center;
     position: relative;
-    border-right: 3px solid #fff;
     cursor: pointer;
     overflow: hidden;
     color: #fff;
