--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -221,7 +221,7 @@
 #module{
     position: relative;
     padding: 20px, 0px, 30px, 0px;
-    width:100%;
+    width: 770px;
     height: 330px;
     display: block;
 
