--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,7 +218,7 @@
   }
 }
 //What's New Box
-.module{
+.what-new-link{
     position: relative;
     padding: 20px, 0px, 30px, 0px;
     width: 770px;
@@ -227,9 +227,6 @@
 
 }
 .mod-link{
-    width: 100%;
-    height: 0;
-    padding-bottom: 30px;
     float: left;
     text-align: center;
     position: relative;
@@ -243,16 +240,15 @@
     color: #fff;
     border-color: #fff;
     position: relative;
+    font-size: 1.25em;
+    display: inline-block;
+    z-index: 1;
+    padding: 0.9375em 1.25em;
+    border: 2px solid;
+    border-radius: 5px;
+    text-decoration: none;
   }
-.mod {
-      font-size: 1.25em;
-      display: inline-block;
-      z-index: 1;
-      padding: 0.9375em 1.25em;
-      border: 2px solid;
-      border-radius: 5px;
-      text-decoration: none;
-}
+
 .mod-img {
     position: absolute;
     width: 100%;
@@ -282,11 +278,9 @@
     }
 .mod-link {
         &:hover {
-            .mod {
+            .mod-over-img {
                 background-color: #fff !important;
                 color: #0db7b8 !important;
-            }
-            .mod-over-img {
                 -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
                 transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
             }
