--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,13 +218,14 @@
   }
 }
 //What's New Box
-.what-new-link{
+#what-new-link{
     position: relative;
+    div{
     padding: 20px, 0px, 30px, 0px;
     width: 770px;
     height: 330px;
     display: block;
-
+}
 }
 .mod-link{
     float: left;
