--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -234,19 +234,22 @@
     overflow: hidden;
     color: #fff;
 }
+.mod{
+  font-size: 1.25em;
+  display: inline-block;
+  z-index: 1;
+  padding: 0.9375em 1.25em;
+  border: 2px solid;
+  border-radius: 5px;
+  text-decoration: none;
+}
 .mod-over-img {
     display: inline-block;
     vertical-align: middle;
     color: #fff;
     border-color: #fff;
     position: relative;
-    font-size: 1.25em;
-    display: inline-block;
-    z-index: 1;
-    padding: 0.9375em 1.25em;
-    border: 2px solid;
-    border-radius: 5px;
-    text-decoration: none;
+
   }
 
 .mod-img {
@@ -278,9 +281,11 @@
     }
 .mod-link {
         &:hover {
+            .mod{
+              background-color: #fff !important;
+              color: #0db7b8 !important;
+            }
             .mod-over-img {
-                background-color: #fff !important;
-                color: #0db7b8 !important;
                 -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
                 transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
             }
