--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,9 +218,10 @@
   }
 }
 //What's New Box
-#mod-new{
+.mod-new{
     position: relative;
-    padding: 20px, 0px, 30px, 0px;
+    padding-top: 20px;
+    padding-bottom: 30px;
     width: 770px;
     height: 330px;
     display: block;
@@ -254,7 +255,6 @@
 
 .mod-img {
     position: absolute;
-    width: 100%;
     top: 0;
     right: 0;
     left: 0;
@@ -792,7 +792,7 @@ h3 {
   	border: none;
   }
 
-  #module {
+  #mod-new {
     div{
       width:100%;
       background-position: center;
