--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -229,7 +229,6 @@
 
 .mod-link{
     float: left;
-    margin-left: 30px;
     height:100%;
     width: 100%;
     text-align: center;
@@ -680,52 +679,6 @@ h3 {
 }
 
 
-// NewestAdditions
-
-#newest-additions {
-
-  color: @white;
-  padding: 3px 14px 8px 14px;
-  background-color: rgb(0,45,70);
-
-  h2 {
-
-	color: @white;
-	padding: 8px 8px 8px 8px;
-    margin: 0;
-	font-weight: bold;
-    background-color: rgb(0,45,70);
-
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0px 0;
-  }
-
-  li {
-    position: relative;
-    padding: 0;
-    margin: 0;
-  }
-
-  a {
-    color: @white;
-    display: block;
-    padding: 3px 8px 3px 8px;
-	border-bottom: 1px solid @white;
-    .text-overflow();
-    &:hover {
-      background-color: rgb(48,71,89);
-	  color: rgb(3,181,181);
-    }
-  }
-
-}
-
-
-
 // Responsive design
 
 
@@ -912,7 +865,7 @@ h3 {
 	width: 268px;
   }
 
-  .span7 {
+  .mod-new {
     width: 436px;
   }
 
