--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,8 +218,8 @@
   }
 }
 //What's New Box
-.mod-new{
-    position: relative;
+#mod-new{
+  div{  position: relative;
     padding-top: 20px;
     padding-bottom: 30px;
     width: 770px;
@@ -301,6 +301,7 @@
             }
         }
     }
+  }  
 // Virtual exhibits
 #virtual-exhibit {
 
