Revert "css change"
This reverts commit a353ef0af211db95dcb3bf84fce2e8ec06a63e00.

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,8 +218,8 @@
   }
 }
 //What's New Box
-#mod-new{
-  div{  position: relative;
+.mod-new{
+    position: relative;
     padding-top: 20px;
     padding-bottom: 30px;
     width: 770px;
@@ -301,7 +301,6 @@
             }
         }
     }
-  }  
 // Virtual exhibits
 #virtual-exhibit {
 
