--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -224,6 +224,7 @@
     padding-bottom: 30px;
     width: 770px;
     height: 330px;
+    margin-left: 30px;
     display: block;
 }
 
@@ -756,11 +757,12 @@ h3 {
   	border: none;
   }
 
-  #mod-new {
-    div{
-      width:100%;
-      background-position: center;
-    }
+  .mod-new {
+    padding-bottom: 0;
+    float: none;
+    width: 100%;
+    height: 330px;
+    margin-left: 0px;
   }
 
   #virtual-exhibit{
@@ -867,6 +869,8 @@ h3 {
 
   .mod-new {
     width: 436px;
+    height: 355px;
+    margin-left: 20px;
   }
 
   .span8 {
