--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -757,7 +757,7 @@ h3 {
   	border: none;
   }
 
-  .mod-new {
+  #mod-new {
     padding-bottom: 0;
     float: none;
     width: 100%;
@@ -867,7 +867,7 @@ h3 {
 	width: 268px;
   }
 
-  .mod-new {
+  #mod-new {
     width: 436px;
     height: 355px;
     margin-left: 20px;
