--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -830,6 +830,11 @@ h3 {
       }
 	}
 }
+  #mod-new {
+    width: 620px;
+    height: 443px;
+    margin-left: 20px;
+  }
 
 @media (max-width: 979px) {
 
