--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -696,6 +696,13 @@ h3 {
 	width: 65%;
     margin-left: 18%;
   }
+  #mod-new {
+    padding-bottom: 0;
+    float: none;
+    width: 100%;
+    height: 330px;
+    margin-left: 0px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -755,8 +762,6 @@ h3 {
   #context-menu a {
   	border: none;
   }
-
-
 
   #virtual-exhibit{
     div {
@@ -827,6 +832,7 @@ h3 {
     height: 443px;
     margin-left: 20px;
   }
+
 }
 @media (max-width: 979px) {
 
@@ -856,6 +862,7 @@ h3 {
     font-size: 45px;
   }
 
+
 }
 
 @media (max-width: 979px) and (min-width: 768px) {
@@ -864,11 +871,6 @@ h3 {
 	width: 268px;
   }
 
-  #mod-new {
-    width: 436px;
-    height: 355px;
-    margin-left: 20px;
-  }
 
   .span8 {
     width: 436px;
