--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -696,7 +696,7 @@ h3 {
 	width: 65%;
     margin-left: 18%;
   }
-  #mod-new {
+  .mod-new {
     padding-bottom: 0;
     float: none;
     width: 100%;
@@ -827,7 +827,7 @@ h3 {
       font-size: 21px;
       }
 	}
-  #mod-new {
+  .mod-new {
     width: 620px;
     height: 443px;
     margin-left: 20px;
