--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -871,6 +871,11 @@ h3 {
 	width: 268px;
   }
 
+  .mod-new {
+    width: 436px;
+    height: 443px;
+    margin-left: 20px;
+  }
 
   .span8 {
     width: 436px;
