--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -696,7 +696,7 @@ h3 {
 	width: 65%;
     margin-left: 18%;
   }
-  .mod-new {
+  #mod-new {
     padding-bottom: 0;
     float: none;
     width: 100%;
@@ -873,7 +873,7 @@ h3 {
 
   .mod-new {
     width: 436px;
-    height: 443px;
+    height: 353px;
     margin-left: 20px;
   }
 
