--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -696,13 +696,7 @@ h3 {
 	width: 65%;
     margin-left: 18%;
   }
-  #mod-new {
-    padding-bottom: 0;
-    float: none;
-    width: 100%;
-    height: 330px;
-    margin-left: 0px;
-  }
+
 }
 
 @media (max-width: 767px) {
@@ -761,6 +755,14 @@ h3 {
 
   #context-menu a {
   	border: none;
+  }
+
+  .mod-new {
+    padding-bottom: 0;
+    float: none;
+    width: 100%;
+    height: 330px;
+    margin-left: 0px;
   }
 
   #virtual-exhibit{
