--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -218,18 +218,18 @@
   }
 }
 //What's New Box
-.mod-new{
+.mod-new {
     position: relative;
     padding-top: 20px;
     padding-bottom: 30px;
     width: 770px;
     height: 330px;
+    margin-left: 30px;
     display: block;
 }
 
-.mod-link{
+.mod-link {
     float: left;
-    margin-left: 30px;
     height:100%;
     width: 100%;
     text-align: center;
@@ -247,7 +247,7 @@
     bottom: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: 0 40%;
     background-blend-mode: multiply;
     background-color: #0db7b8;
     -webkit-transform: scale3d(1, 1, 1) rotate(0);
@@ -281,15 +281,20 @@
     color: #fff;
     border-color: #fff;
     position: relative;
+    top: 40%;
 
   }
-
+.mod-img {
+  &:hover {
+        -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+        transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+  }
+}
 .mod-link {
         &:hover {
             .mod{
               background-color: #fff !important;
               color: #0db7b8 !important;
-              border-color: #0db7b8 !important;
             }
             .mod-over-img {
                 -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
@@ -675,52 +680,6 @@ h3 {
 }
 
 
-// NewestAdditions
-
-#newest-additions {
-
-  color: @white;
-  padding: 3px 14px 8px 14px;
-  background-color: rgb(0,45,70);
-
-  h2 {
-
-	color: @white;
-	padding: 8px 8px 8px 8px;
-    margin: 0;
-	font-weight: bold;
-    background-color: rgb(0,45,70);
-
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0px 0;
-  }
-
-  li {
-    position: relative;
-    padding: 0;
-    margin: 0;
-  }
-
-  a {
-    color: @white;
-    display: block;
-    padding: 3px 8px 3px 8px;
-	border-bottom: 1px solid @white;
-    .text-overflow();
-    &:hover {
-      background-color: rgb(48,71,89);
-	  color: rgb(3,181,181);
-    }
-  }
-
-}
-
-
-
 // Responsive design
 
 
@@ -737,6 +696,7 @@ h3 {
 	width: 65%;
     margin-left: 18%;
   }
+
 }
 
 @media (max-width: 767px) {
@@ -755,8 +715,7 @@ h3 {
 
     background: none;
     padding-top: 20px;
-	padding-bottom: 0px;
-
+	  padding-bottom: 0px;
   }
 
   #homepage-nav {
@@ -798,11 +757,12 @@ h3 {
   	border: none;
   }
 
-  #mod-new {
-    div{
-      width:100%;
-      background-position: center;
-    }
+  .mod-new {
+    padding-bottom: 0;
+    float: none;
+    width: 100%;
+    height: 330px;
+    margin-left: 0px;
   }
 
   #virtual-exhibit{
@@ -869,8 +829,13 @@ h3 {
       font-size: 21px;
       }
 	}
-}
+  .mod-new {
+    width: 620px;
+    height: 443px;
+    margin-left: 20px;
+  }
 
+}
 @media (max-width: 979px) {
 
   #intro {
@@ -899,6 +864,7 @@ h3 {
     font-size: 45px;
   }
 
+
 }
 
 @media (max-width: 979px) and (min-width: 768px) {
@@ -907,8 +873,10 @@ h3 {
 	width: 268px;
   }
 
-  .span7 {
+  .mod-new {
     width: 436px;
+    height: 355px;
+    margin-left: 20px;
   }
 
   .span8 {
