--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -328,6 +328,7 @@
 	color: rgb(247,206,60);
     background-color: #000;
     background-color: rgba(0, 0, 0, .4);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
   }
 
   .title {
