--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -347,7 +347,7 @@
     font-size: 14px;
 	font-style: normal;
     line-height: 16px;
-    color: lighten(@grayLight, 10%);
+    color: #0db7b8;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
   }
 
