add shadow to slideshow header

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -459,6 +459,7 @@ h3 {
     background-color: #000;
     background-color: rgba(0, 0, 0, .6);
 	color: rgb(247,206,60);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
   }
 
   .title {
