--- a/css/less/main.less
+++ b/css/less/main.less
@@ -114,7 +114,7 @@ h6 {
 	text-transform: uppercase;
   }
   p {
-  	margin: 10px 0 10px 0;
+  	margin: 0 0 10px 0;
   }
 
 	section h2:last-child {
