--- a/css/less/main.less
+++ b/css/less/main.less
@@ -126,7 +126,7 @@ h6 {
 	}
 
  ul {
- 	margin: 10px 0 10px 0;
+ 	margin: 0px 0 10px 0;
  	}
 
  .field {
@@ -766,7 +766,7 @@ select {
   border-top: 1px solid #e3e3e3;
 
   p {
-    margin: 10px !important;
+    margin: 0 10px !important;
   }
 
   select, input {
