Revert "margin updates"
This reverts commit f17d96db5e6640f94961e5fffd6e19505b958edd.

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -121,7 +121,7 @@ h6 {
 	}
 
  ul {
- 	margin: 0px 0 10px 0;
+ 	margin: 10px 0 10px 0;
  	}
 
  .field {
@@ -761,7 +761,7 @@ select {
   border-top: 1px solid #e3e3e3;
 
   p {
-    margin: 0 10px !important;
+    margin: 10px !important;
   }
 
   select, input {
