--- a/main.less
+++ b/main.less
@@ -108,7 +108,10 @@ h6 {
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
   }
-  p {
+    p.title {
+      	margin: 10px 0 10px 0;
+    }
+    p {
   	margin: 0px 0 10px 0;
   }
 }
