search result margin

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -85,7 +85,7 @@ h6 {
     margin: inherit;
     padding: inherit;
   }
- section > a:after {
+   section > a:after {
       content: "»";
       position: absolute;
       top: 0px;
@@ -784,7 +784,9 @@ select {
   padding: 0px 10px 10px 10px;
   border-bottom: 1px solid @grayLighter;
   .clearfix();
-
+  title {
+        margin: 10px 0 10px 0;
+  }
   a {
     text-decoration: none;
 	}
