--- a/css/less/main.less
+++ b/css/less/main.less
@@ -781,10 +781,10 @@ select {
 
 .search-result {
 
-  padding: 10px 10px 10px 10px;
+  padding: 0px 10px 10px 10px;
   border-bottom: 1px solid @grayLighter;
   .clearfix();
-  title {
+  p {
         margin: 10px 0 10px 0;
   }
 
