search title margins

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -784,7 +784,8 @@ select {
   padding: 0px 10px 10px 10px;
   border-bottom: 1px solid @grayLighter;
   .clearfix();
-  p {
+
+  .title {
         margin: 10px 0 10px 0;
   }
 
