--- a/css/less/main.less
+++ b/css/less/main.less
@@ -785,7 +785,7 @@ select {
   border-bottom: 1px solid @grayLighter;
   .clearfix();
 
-  p {
+  .p {
         margin: 10px 0 10px 0; !important
   }
 
