--- a/css/less/main.less
+++ b/css/less/main.less
@@ -785,8 +785,8 @@ select {
   border-bottom: 1px solid @grayLighter;
   .clearfix();
 
-  .p {
-        margin: 10px 0 10px 0; !important
+  p {
+    margin: 10px 0 10px 0 !important;
   }
 
   a {
