placeholder text color

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -576,7 +576,7 @@ h1 .count {
 }
 
 #treeview-search .search-box input {
-  padding: inherit;
+  .placeholder(#fff);
 }
 
 #treeview-list, #treeview-list .pager li > a {
