gray arrow location

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -825,7 +825,7 @@ select {
 
 .top-dropdown, button.top-dropdown:link, button.top-dropdown:visited, button.top-dropdown:active {
     padding: 5px 29px 6px 17px;
-    background-image: url(../../arDominionPlugin/images/gray-arrow.png);
+    background-image: url(../../images/gray-arrow.png);
     background-position: right center;
     background-repeat: no-repeat;
     color: #bbb;
