--- a/css/less/main.less
+++ b/css/less/main.less
@@ -619,6 +619,7 @@ body.login #content {
     background-image: none;
     background-color: rgba(0, 0, 0, 0.20);
     text-shadow: none;
+    width:auto;
   }
   [type=text] {
     .placeholder(#bbb);
