--- a/css/less/main.less
+++ b/css/less/main.less
@@ -625,6 +625,13 @@ body.login #content {
     .placeholder(#bbb);
   }
 }
+.btn:last-child {
+    margin-left: -1px;
+    -webkit-border-radius: 0 4px 4px 0;
+    -moz-border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0;
+    width: auto;
+}
 
 .x-btn {
   color: @white;
