--- a/css/less/main.less
+++ b/css/less/main.less
@@ -838,7 +838,7 @@ select {
     -webkit-border-radius: 0 4px 4px 0;
     -moz-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
-    width: inherit;
+    width: auto;
 }
 
 .input-append .add-on:last-child, .input-append .btn:last-child, .input-append .btn-group:last-child>.dropdown-toggle {
@@ -846,7 +846,7 @@ select {
     -moz-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
     padding: 4px 12px 3px 12px;
-    width: inherit;
+    width: auto;
 }
 
 .advanced-search select {
