homepage slideshow responsive position

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -775,19 +775,19 @@ h3 {
   }
 
   #slide1 {
-    background-position: center;
+    background-position: center !important;
   }
   #slide2 {
-    background-position: left;
+    background-position: center !important;
   }
   #slide3 {
-    background-position: center;
+    background-position: center !important;
   }
   #slide4 {
     background-position: left;
   }
   #slide5 {
-    background-position: center;
+    background-position: center !important;
   }
 
   button.clipboard-wide {
