project pane responsive position

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -770,7 +770,7 @@ h3 {
   #virtual-exhibit{
     div {
       width: 100%;
-      background-position: right;
+      background-position: center !important;
     }
   }
 
