--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -765,6 +765,7 @@ h3 {
     width: 100%;
     height: 330px;
     margin-left: 0px;
+    background-position: center !important;
   }
 
   #virtual-exhibit{
