supdate css slide 6

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -464,6 +464,16 @@
         display: block;
         height: 500px;
     }
+    
+    #slide6 {
+        background-image: url("/plugins/arArchivesOrPlugin/images/slide6.jpg");
+        background-repeat: no-repeat;
+        background-position: 0 40%;
+        background-size: cover;
+        width: 100%;
+        display: block;
+        height: 500px;
+    }
 
     h3 {
         position: absolute;
