--- a/css/less/header.less
+++ b/css/less/header.less
@@ -228,7 +228,7 @@
     .input-append {
       text-align: center;
       width: 100%;
-      padding-bottom: 2em;
+      //padding-bottom: 2em;
     }
     form {
       text-align: center;
