--- a/css/less/header.less
+++ b/css/less/header.less
@@ -106,7 +106,7 @@
   input[type=text] {
 
     display: inline-block;
-    font-size: 15px;
+    //font-size: 15px;
     color: #333;
     outline: none;
     .placeholder(#999);
