fix search suggest position

--- a/css/less/header.less
+++ b/css/less/header.less
@@ -90,9 +90,9 @@
   }
 
   .search-popover {
-    left: 37px;
+    //left: 37px;
     top: 30px;
-    right: 33px;
+    right: 37px;
   }
 
   // Make the border darker
