--- a/css/less/header.less
+++ b/css/less/header.less
@@ -233,6 +233,11 @@
     form {
       text-align: center;
     }
+      .search-popover {
+    left: 37px;
+    top: 30px;
+    right: 37px;
+  }
     input[type=text] {
       width: 85%;
     }
