--- a/css/less/footer.less
+++ b/css/less/footer.less
@@ -147,8 +147,8 @@
     border-radius: 6px;
 }
 
-.select, textarea, input[id="id_email"]{
-    color:#fff
+.select, textarea, input[id="id_email_form"]{
+    /*color:#fff
 	position: absolute;
     top: 0;
     left: 0;
@@ -156,14 +156,14 @@
     display: block;
     width: 100%;
     height: 100%;
-    float: inherit;
+    float: inherit; */
     padding: 1em;
-    background: transparent;
-    border: 2px solid #d8dede;
-    border-radius: 6px;
-	-webkit-appearance: none;
+    //background: transparent;
+    //border: 2px solid #d8dede;
+    //border-radius: 6px;
+	//-webkit-appearance: none;
 	font-size: 16px;
-	background-color: #fff;
+	//background-color: #fff;
 	
 }
 
