--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -320,7 +320,7 @@
     position: relative;
 
     div {
-        background-image: url("/plugins/arArchivesOrPlugin/images/OrgLot146_b06_SalemCapital_4.jpg");
+        background-image: url("/plugins/arArchivesOrPlugin/images/yasui.jpg");
         background-repeat: no-repeat;
         background-position: 0 35%;
         background-size: cover;
@@ -467,6 +467,16 @@
     
     #slide6 {
         background-image: url("/plugins/arArchivesOrPlugin/images/slide6.jpg");
+        background-repeat: no-repeat;
+        background-position: 0 0%;
+        background-size: cover;
+        width: 100%;
+        display: block;
+        height: 500px;
+    }
+    
+     #slide7 {
+        background-image: url("/plugins/arArchivesOrPlugin/images/OrgLot146_b06_SalemCapital_4.jpg");
         background-repeat: no-repeat;
         background-position: 0 0%;
         background-size: cover;
